--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>newcar</title>
+    <title>中之宝</title>
   </head>
+   <script type="text/javascript">
+  	(function(doc, win) {
+			var docEl = doc.documentElement;
+			resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize';
+		
+			recalc = function() {
+				var clientWidth = docEl.clientWidth;
+				
+				if(!clientWidth) return;
+				if(clientWidth >= 750) {
+					docEl.style.fontSize = 100	 * (clientWidth / 750) + 'px';
+				} else {
+					docEl.style.fontSize = 100 * (clientWidth / 750) + 'px';
+				}
+			};
+		
+			if(!doc.addEventListener) return;
+			win.addEventListener(resizeEvt, recalc, false);
+			doc.addEventListener('DOMContentLoaded', recalc, false);
+		})(document, window);
+  </script>
+  
+  
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
