--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,height=device-height,user-scalable=no,
-initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,target-densitydpi=device-dpi" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="keywords" content="汽车，金融，贷款，保险"/>
 		<meta name="description" content="汽车，金融，贷款，保险"/>
 		<meta name="author" content="恺缔科技，王文华，于秋菊，杨勇"/>
